<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_step"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>