<resources>
    <string name="app_name">Cookies Cook</string>
    <string name="splash_logo">Splash Logo</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="sample_initial">N</string>
    <string name="sample_recipe">Nutella</string>
    <string name="text_baking_app">Baking List</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="sample_number">1</string>
    <string name="text_ingredients">Ingredients</string>
    <string name="sample_measure">6 TBLSP</string>
    <string name="sample_step">2. Melt the butter and bittersweet chocolate together in a microwave or a double boiler. If microwaving, heat for 30 seconds at a time, removing bowl and stirring ingredients in between.</string>
    <string name="text_next">Next</string>
    <string name="text_previous">Previous</string>
    <string name="text_title">title</string>
    <string name="title_step_list">Steps</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="sample_servings">8 Servings</string>
    <string name="big_screen">Big Screen</string>
    <string name="text_set_widget">Set To Widget</string>
    <string name="sample_widget_title">Nutella Pie Ingredients</string>
    <string name="text_servings">Servings</string>
</resources>
