<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <!--<Button-->
        <!--android:id="@+id/button_next"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="@dimen/button_height"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_marginBottom="@dimen/horizontal_margin"-->
        <!--android:layout_marginRight="@dimen/horizontal_margin"-->
        <!--android:background="@drawable/bg_button_next_prev"-->
        <!--android:text="@string/text_next"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@android:color/white" />-->

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        style="?attr/borderlessButtonStyle"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/text_next"
        android:textColor="@android:color/white"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_ingredient"
        android:layout_above="@id/button_next"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>